<resources>
    <string name="app_name">Fast Messenger Beta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_friends">Friends</string>
    <string name="fragment_settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="exit_message">Do you really want to exit?</string>
    <string name="type_message">Your message&#8230;</string>
    <string name="nav_logout">Logout from account</string>
    <string name="update">Update</string>
    <string name="updating">Updating</string>
    <string name="search">Find</string>
    <string name="type_message_error">Type your message!</string>
    <string name="warning">Warning!</string>
    <string name="not_connected_to_internet">You are not connected to Internet!</string>
    <string name="exit">Exit</string>
    <string name="activity_materials_title">Chat Materials</string>
    <string name="materials_photo">Photos</string>
    <string name="materials_audio">Audios</string>
    <string name="materials_video">Videos</string>
    <string name="materials_doc">Documents</string>
    <string name="wait">Wait&#8230;</string>
    <string name="login_wait_message">Login in&#8230;</string>
    <string name="leave_from_chat">Leave from chat</string>
    <string name="return_to_chat">Return to chat</string>
    <string name="leave_chat_confirm">You want to leave from this chat?</string>
    <string name="return_chat_confirm">You want to return to this chat?</string>
    <string name="you_leaved_chat">You leaved this chat.</string>
    <string name="returned_to_chat">You returned to this chat.</string>
    <string name="online_from">Online from</string>
    <string name="last_seen_at">Last seen at</string>
    <string name="online_from_phone">Online from phone</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="authorize">Authorize</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="message_history_deleted">Message history was been deleted.</string>
    <string name="confirm_delete_dialog">Are you really want to clean this dialog?</string>
    <string name="functional_alert">Functional</string>
    <string name="clean_history">Clean message history</string>
    <string name="event">event</string>
    <string name="group_type">group</string>
    <string name="page_type">page</string>
    <string name="closed_type">Closed </string>
    <string name="open_type">Open </string>
    <string name="private_type">Private </string>
    <string name="change_title">Change title</string>
    <string name="cancel">Cancel</string>
    <string name="title_changed">Title changed</string>
    <string name="chat_title">Chat title</string>
    <string name="news">News</string>
    <string name="replies">Replies</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing&#8230;</string>
    <string name="crash_text">App has been crashed.</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_functional">Functional</string>
    <string name="cant_work_without_permissions">OTA Can\'t work without storage permission!</string>
    <string name="grant_permissions">Grant</string>
    <string name="need_permissions_message">Storage permission is needed to download OTA files</string>
    <string name="refreshed_message">Refreshed</string>
    <string name="invited_by">Invited by</string>
    <string name="downloading">Downloading&#8230;</string>
</resources>
