<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:checked="true"
            android:icon="@drawable/ic_nav_messages"
            android:title="@string/nav_messages" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_nav_friends"
            android:title="@string/nav_friends" />
    </group>

    <item android:title="@string/nav_functional">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_account_exit"
                android:icon="@drawable/ic_nav_exit_from_account"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
